--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css" integrity="sha512-PgQMlq+nqFLV4ylk1gwUOgm6CtIIXkKwaIHp/PAIWHzig/lKZSEGKEysh0TCVbHJXCLN7WetD8TFecIky75ZfQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="css/style.css">
     <title>PlayStation</title>
 </head>
@@ -14,34 +15,21 @@
            <div>SONY</div>
            </div>
         <div class="head-bottom">
-            <nav class="navbar pt-4 navbar-expand-lg navbar-light bg-light">
+            <nav class="navbar navbar-expand-lg navbar-light bg-light">
                 <div class="container-fluid">
                   <a class="navbar-brand" href="#">
-                      <div class="logo-page">
-                          <img src="img/play_logo.svg" alt="">
-                      </div></a>
+                      <img src="img/play_logo.svg" alt="">
+                  </a>
                   <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                   </button>
                   <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                       <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">Giochi</a>
+                        <a class="nav-link active" aria-current="page" href="#"><strong>Giochi<i class="fas fa-chevron-down ms-1"></i></strong></a>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link" href="#">Hardware</a>
-                      </li>
-                      <li class="nav-item">
-                        <a class="nav-link" href="#">Servizi</a>
-                      </li>
-                      <li class="nav-item">
-                        <a class="nav-link" href="#">Novità</a>
-                      </li>
-                      <li class="nav-item">
-                        <a class="nav-link" href="#">Fai aquisti</a>
-                      </li>
-                      <li class="nav-item">
-                        <a class="nav-link" href="#">Supporto</a>
+                        <a class="nav-link" href="#"><strong>Hardware<i class="fas fa-chevron-down ms-1"></i></strong></a>
                       </li>
                       <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -55,15 +43,28 @@
                         </ul>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+                        <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true"></a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link" href="#"><strong>Servizi<i class="fas fa-chevron-down ms-1"></i></strong></a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link" href="#"><strong>Novità<i class="fas fa-chevron-down ms-1"></i></strong></a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link" href="#"><strong>Fai acquisti<i class="fas fa-chevron-down ms-1"></i></strong></a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link" href="#"><strong>Supporto<i class="fas fa-chevron-down ms-1"></i></strong></a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link link-now" href="#"><strong>My PlayStation</strong><i class="fas fa-chevron-down ms-1"></i></i></a>
                       </li>
                     </ul>
+                    
                     <form class="d-flex">
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">My PlayStation</a>
-                          </li>
-                          <button type="button" class="btn btn-primary cc-btn-accedere">Accedi</button>
-                      <button class="btn btn-outline-success cc-btn-search" type="submit">Search</button>
+                        <button class="btn btn-outline-success bg-dark cc-btn-c" type="submit">Accedi</button>
+                      <button class="btn btn-outline-success cc-btn-b" type="submit"><i class="fas fa-search"></i></button>
                     </form>
                   </div>
                 </div>
