--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                 <div class="box box-play">
                     <img src="img/joypad-thumb.png" alt="">
                 </div>
-                Console ps5
+               <div>Console ps5</div>
             </div>
             <div class="col-3 col-md-2 me-4 bord pb-4">
                 <div class="box box-play">
@@ -171,7 +171,7 @@
          <div class="container-4 pb-5 container">
             <div class="titolo pt-5">
              <h2>Nuove uscite</h2>
-             <div>Giochi incredibili per ps4 e ps5 disponibili ora</div>
+             <div class="mb-3">Giochi incredibili per ps4 e ps5 disponibili ora</div>
             </div>
             <div class="row row-giochi">
                 <div class="col-6 col-md-4 col-lg-2 mb-4">
@@ -252,7 +252,7 @@
           <div class="container-5 pb-5 container">
               <div class="titolo pt-3">
                   <h2>Esplora PlayStation 4</h2>
-                  <div class="text pt-3">Giochi incredibili e intrattenimento senza fine. <br>Non c'è mai stato un momento migliore per giocare sulla tua PS4</div>
+                  <div class="text pt-3"><strong> Giochi incredibili e intrattenimento senza fine. <br>Non c'è mai stato un momento migliore per giocare sulla tua PS4</strong></div>
               </div>
               <div class="row mt-4">
                   <div class="col-12 col-md-4 col-lg-4">
@@ -260,24 +260,24 @@
                           <img src="img/ps4-slim-homepage-image-block.jpg" alt="">
                       </div>
                       <h2>PlayStation 4</h2>
-                      <p>Giochi incredibili live su PS4, con un TB di spazio di archiviazione</p>
-                      <button type="button" class="btn btn-primary">Primary</button>
+                      <p class="experience"><strong>Giochi incredibili live su PS4, con un TB di spazio di archiviazione</strong></p>
+                      <button type="button" class="btn btn-primary cc-scopri">Scopri di più</button>
                   </div>
                   <div class="col-12 col-md-4 col-lg-4">
                     <div class="box">
                         <img src="img/double11-202010-tw-psvr.jpg" alt="">
                     </div>
                     <h2>PlayStation VR</h2>
-                    <p>Giochi incredibili live su PS4, con un TB di spazio di archiviazione</p>
-                      <button type="button" class="btn btn-primary">Primary</button>
+                    <p class="experience"><strong>Oltre 500 titoli ed esperienze di gioco. <br>Scoprili tutti.</strong></p>
+                      <button type="button" class="btn btn-primary cc-scopri">Scopri di più</button>
                 </div>
                 <div class="col-12 col-md-4 col-lg-4">
                     <div class="box">
                         <img src="img/dualshock-4-listing-thumb.jpg" alt="">
                     </div>
                     <h2>Accessori</h2>
-                    <p>Giochi incredibili live su PS4, con un TB di spazio di archiviazione</p>
-                      <button type="button" class="btn btn-primary">Primary</button>
+                    <p class="experience"><strong>Migliora la tua esperienza PS4 con una gamma di accessori ufficiali.</strong></p>
+                      <button type="button" class="btn btn-primary cc-scopri">Scopri di più</button>
                 </div>
               </div>
           </div>
@@ -287,7 +287,7 @@
                      <img src="img/ps-plus-logo.png" alt="">
                     </div>
                      <div class="text pb-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Est cumque ab quidem. <br> Omnis, asperiores id dicta animi illum dolor, sunt recusandae ullam iusto assumenda, <br> iste iure! Mollitia ad cupiditate deserunt.</div>
-                     <button type="button" class="btn btn-primary">Esplora PlayStation Plus</button>
+                     <button type="button" class="btn btn-primary cc-btn-esplora"><strong> Esplora PlayStation Plus</strong></button>
               </div>
           </section>
           <div class="container-7 pb-5 container">
@@ -323,7 +323,7 @@
                    
                   </div>
                    <div class="text pb-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Est cumque ab quidem. <br> Omnis, asperiores id dicta animi illum dolor, sunt recusandae ullam iusto assumenda, <br> iste iure! Mollitia ad cupiditate deserunt.</div>
-                   <button type="button" class="btn btn-primary">Esplora PlayStation Plus</button>
+                   <button type="button" class="btn btn-primary cc-btn-play-now"><strong>Esplora PlayStation Now</strong></button>
             </div>
         </section>
             <div class="container-9 container">
@@ -331,19 +331,25 @@
                        <h3>Seguici sui social media</h3>
                    </div>
                    <div class="row">
-                       <div class="col">
-                           <div class="box">
+                       <div class="col ">
+                           <div class="box social">
                                <img src="img/twitter.jpg" alt="">
                            </div>
                        </div>
                        <div class="col">
-                        <div class="box">fjdjdj</div>
+                        <div class="box social">
+                            <img src="img/twitter.jpg" alt="">
+                        </div>
                     </div>
                     <div class="col">
-                        <div class="box">fjdjdj</div>
+                        <div class="box social">
+                            <img src="img/twitter.jpg" alt="">
+                        </div>
                     </div>
                     <div class="col">
-                        <div class="box">fjdjdj</div>
+                        <div class="box social">
+                            <img src="img/twitter.jpg" alt="">
+                        </div>
                     </div>
                    </div>
             </div>
