--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <header>
         <div class="head-top pe-3">
-           <div>SONY</div>
+           <div><strong>SONY</strong></div>
            </div>
         <div class="head-bottom">
             <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -331,24 +331,24 @@
                        <h3>Seguici sui social media</h3>
                    </div>
                    <div class="row">
-                       <div class="col ">
+                       <div class="col-6 col-md-3 col-lg-3 mb-3 ">
                            <div class="box social">
                                <img src="img/twitter.jpg" alt="">
                            </div>
                        </div>
-                       <div class="col">
+                       <div class="col-6 col-md-3 col-lg-3 mb-3">
                         <div class="box social">
-                            <img src="img/twitter.jpg" alt="">
+                            <img src="img/facebook.jpg" alt="">
                         </div>
                     </div>
-                    <div class="col">
+                    <div class="col-6 col-md-3 col-lg-3 mb-3">
                         <div class="box social">
-                            <img src="img/twitter.jpg" alt="">
+                            <img src="img/instagram.jpg" alt="">
                         </div>
                     </div>
-                    <div class="col">
+                    <div class="col-6 col-md-3 col-lg-3 mb-3">
                         <div class="box social">
-                            <img src="img/twitter.jpg" alt="">
+                            <img src="img/youtube.png" alt="">
                         </div>
                     </div>
                    </div>
