--- a/index.html
+++ b/index.html
@@ -158,14 +158,14 @@
             </div>
           </div>
       </div>
-      <section class="section-2 section-full">
+      <section class="section-2 section-full pb-5">
          <div class="container-3 container">
              <div class="logo1">
                  <img src="img/it-takes-two-logo.png" alt="">
              </div>
              <h2>Un'avventura <br>cooperativa <br>selvaggia ti attende</h2>
-             <div class="testo">Lorem ipsum dolor sit amet consectetur adipisicing elit. <br> Ea alias facilis consequatur quasi accusamus. Nihil iusto <br> doloremque officia? Maiores amet ipsam eligendi error <br> voluptatum tenetur repudiandae laboriosam nemo esse veniam!</div>
-             <button type="button" class="btn btn-danger mt-4 mb-5">Aquista ora</button>
+             <div class="testo">Trova un amico e partite insieme per l'avventura <br>più folle delle vostre vite in It Takes Two, un gioco <br>d'avventura cooperativa a piattaforme che <br>stravolge il suo genere.</div>
+             <div class="contain-btn-avventura mt-4 mb-5"><button type="button" class="btn cc-btn-avventura">Aquista ora</button></div>
          </div>
       </section>
       <section class="section-3 section-all">
@@ -288,7 +288,7 @@
                      <img src="img/ps-plus-logo.png" alt="">
                     </div>
                      <div class="text pb-4"><strong>Migliora la tua esperienza PlayStation con l'accesso a multigiocatore online, <br>giochi mensili, sconti esclusivi e altro ancora.</strong></div>
-                     <button type="button" class="btn btn-primary cc-btn-esplora"><strong> Esplora PlayStation Plus</strong></button>
+                     <div class="cc-btn-plus"><button type="button" class="btn btn-primary cc-btn-esplora"><strong> Esplora PlayStation Plus</strong></button></div>
               </div>
           </section>
           <div class="container-7 pb-5 container">
