centratura elementi console

--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
               </div>
             </div>
           </div>
-          <div class="row row-play">
+          <div class="row row-play ms-5 ms-md-3 ms-lg-5">
               <div class="col-3 col-md-2 me-4 bord pb-3">
                   <div class="box box-play">
                       <img src="img/playstation-5-thumb.png" alt="">
