--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                     </ul>
                     
                     <form class="d-flex">
-                       <a class="link-btn" href="#"><button class="btn btn-outline-success bg-dark cc-btn-c" type="submit">Accedi</button></a>
+                       <div class="link-btn" ><div class="cc-custom-nav"><button class="btn btn-outline-success cc-btn-c" type="submit">Accedi</button></div></div>
                       <button class="btn btn-outline-success cc-btn-b" type="submit"><i class="fas fa-search"></i></button>
                     </form>
                   </div>
